--- a/reserve/templates/Major_location.html
+++ b/reserve/templates/Major_location.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <div>
-        <h1>This is the workspace for displaying majour locations to select</h1>
+        <h1>This is the workspace for displaying major locations to select</h1>
+        
         {% block content %}
         {% endblock content %}
     </div>
