--- a/reserve/templates/index.html
+++ b/reserve/templates/index.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+{% extends "base.html" %}
+{% block content %}
+<h1>Welcome to the Hotel Reservation System</h1>
+<p>Explore our wide range of hotels and make your reservation today!</p>    
 
-</head>
-<body>
-    <h1>Hii</h1>
-    
-</body>
-</html>
+{% endblock content %}
