--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,16 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
-    <div class="container">  
-        <h1>Hello</h1>    
-        {% block navbar %}
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    {% block navbar %}
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,19 +40,41 @@
         </li>
       </ul>
       <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/ name="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
+      {% if user.is_authenticated %}
+      <form action="" method="get">
+        {% csrf_token %}
+        {{user.username}}
+        </form>
+      
+      <form action="{% url 'logout' %}" method="post">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-danger">Logout</button>
+      
+      </form>
+
+       {% else %}
+      <a href="{% url "register" %}" class="btn btn-warning">Register</a>
+      <a href="{% url "login" %}" class="btn btn-success">Login</a> 
+
+      
+      {% endif %}
+
+      </ul>
     </div>
   </div>
 </nav>
 
-        {% endblock navbar %}
+{% endblock navbar %}
 
 
+{% block content %}
+<h1>Content goes here</h1>
+{% endblock content %}
 
-        {% block content %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-        {% endblock content %}
 </body>
 </html>
